--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
       - master 
+    paths:
+      - Dockerfile
+      - .github/workflows/main.yml
 
 jobs:
   docker:
